logs/a10-openstack-lbaas.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/acos'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/client_proxies'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/db'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/db/migration'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/db/migration/alembic_migrations'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/db/migration/alembic_migrations/versions'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/db/models'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/etc'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/neutron_ext'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/neutron_ext/common'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/neutron_ext/db'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/neutron_ext/extensions'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/neutron_ext/services'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/neutron_ext/services/a10_certificate'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/neutron_ext/services/a10_device_instance'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/plumbing'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/db'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/db/migration'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/db/neutron_ext'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/db/neutron_ext/db'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/db/neutron_ext/services'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/db/neutron_ext/services/a10_device_instance'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/unit'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/unit/neutron_ext'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/unit/neutron_ext/common'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/unit/neutron_ext/db'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/unit/unit_config'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/unit/v1'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/unit/v2'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/tests/unit/v2/acos'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/v1'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/v2'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas/vthunder'...
Listing './lib/python3.5/site-packages/a10_neutron_lbaas-1.6.7.egg-info'...
Listing './lib/python3.5/site-packages/a10_openstack_lbaas'...
Listing './lib/python3.5/site-packages/a10_openstack_lbaas-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/a10_openstack_lib'...
Listing './lib/python3.5/site-packages/a10_openstack_lib/resources'...
Listing './lib/python3.5/site-packages/a10_openstack_lib/tests'...
Listing './lib/python3.5/site-packages/a10_openstack_lib-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/acos_client'...
Listing './lib/python3.5/site-packages/acos_client/tests'...
Listing './lib/python3.5/site-packages/acos_client/tests/unit'...
Listing './lib/python3.5/site-packages/acos_client/tests/unit/v30'...
Listing './lib/python3.5/site-packages/acos_client/v21'...
Listing './lib/python3.5/site-packages/acos_client/v21/slb'...
Listing './lib/python3.5/site-packages/acos_client/v21/slb/template'...
Listing './lib/python3.5/site-packages/acos_client/v30'...
Listing './lib/python3.5/site-packages/acos_client/v30/file'...
Listing './lib/python3.5/site-packages/acos_client/v30/slb'...
Listing './lib/python3.5/site-packages/acos_client/v30/slb/template'...
Listing './lib/python3.5/site-packages/acos_client-1.4.2.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/hash_ring'...
Compiling './lib/python3.5/site-packages/hash_ring/__init__.py'...
***   File "./lib/python3.5/site-packages/hash_ring/__init__.py", line 5
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hash_ring-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/units'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
